# irods_client_http_python

./: CHANGELOG.md  README.md  pyproject.toml
irods_http/: __init__.py  collections.py  common.py  data_objects.py  irods_http.py  queries.py  resources.py  rules.py  tickets.py  users_groups.py  zones.py
irods_http_client/: __init__.py  collection_operations.py  collections.py  common.py  data_object_operations.py  data_objects.py  irodsHttpClient.py  irods_http_client.py  queries.py  query_operations.py  resource_operations.py  resources.py  rule_operations.py  rules.py  ticket_operations.py  tickets.py  user_group_operations.py  users_groups.py  zone_operations.py  zones.py
test/: __init__.py  config.py  test_endpoint_operations.py
